@@ -1562,5 +1562,38 @@ namespace Castle.ActiveRecord.Framework.Internal.Tests
 
 			Assert.AreEqual(expected, xml);
 		}
+
+        [Test]
+        public void SimpleCaseExtraLazyOnHasMany() {
+            ActiveRecordModelBuilder builder = new ActiveRecordModelBuilder();
+            ActiveRecordModel model = builder.Create(typeof(ClassWithExtraLazyOnHasMany));
+            Assert.IsNotNull(model);
+
+            SemanticVerifierVisitor semanticVisitor = new SemanticVerifierVisitor(builder.Models);
+            semanticVisitor.VisitNode(model);
+
+            XmlGenerationVisitor xmlVisitor = new XmlGenerationVisitor();
+            xmlVisitor.CreateXml(model);
+
+            String xml = xmlVisitor.Xml;
+
+            const string expected =
+				"<?xml version=\"1.0\" encoding=\"utf-16\"?>\r\n" +
+                "<hibernate-mapping  auto-import=\"true\" default-lazy=\"false\" xmlns:xsd=\"http://www.w3.org/2001/XMLSchema\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xmlns=\"urn:nhibernate-mapping-2.2\">\r\n" +
+                "  <class name=\"Castle.ActiveRecord.Framework.Internal.Tests.Model.ClassWithExtraLazyOnHasMany, Castle.ActiveRecord.Framework.Internal.Tests\" table=\"ClassWithExtraLazyOnHasMany\">\r\n" +
+                "    <id name=\"Id\" access=\"property\" column=\"Id\" type=\"Int32\" unsaved-value=\"0\">\r\n" +
+                "      <generator class=\"native\">\r\n" +
+                "      </generator>\r\n" +
+                "    </id>\r\n" +
+                "    <many-to-one name=\"Parent\" access=\"property\" class=\"Castle.ActiveRecord.Framework.Internal.Tests.Model.ClassWithExtraLazyOnHasMany, Castle.ActiveRecord.Framework.Internal.Tests\" column=\"Parent_Id\" lazy=\"proxy\" />\r\n" +
+                "    <bag name=\"Children\" access=\"property\" table=\"ClassWithExtraLazyOnHasMany\" lazy=\"extra\">\r\n" +
+                "      <key column=\"Parent_Id\" />\r\n" +
+                "      <one-to-many class=\"Castle.ActiveRecord.Framework.Internal.Tests.Model.ClassWithExtraLazyOnHasMany, Castle.ActiveRecord.Framework.Internal.Tests\" />\r\n" +
+                "    </bag>\r\n" +
+                "  </class>\r\n" +
+                "</hibernate-mapping>\r\n";
+
+            Assert.AreEqual(expected, xml);
+        }
 	}
 }
